--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <header>
     <nav id="navbar">
       <div class="portrait">
-        <img src="assets\img\breakCartoon.jpg" alt="ahmed_break" />
+        <img src="assets\img\Ahmedbreak.jpg" alt="ahmed_break" />
       </div>
       <ul class="justify-content-center">
         <li><a href="#welcome-section">About</a></li>
@@ -20,18 +20,18 @@
         <div class="font-weight-bolder">Ahmed <span class="highlight">Break</span></div>
       </h1>
       <h2 class="info font-weight-bolder mt-3">
-        <div><span class="highlight">Full-Stack</span> · Developer</div>
+        <div><span class="highlight">Full-Stack</span> · Team Lead</div>
       </h2>
       <div class="info">
-        1988 Cairo City · Egypt · (+20) 0111 9533 232 ·
+        AL Riyadh · Saudi Arabia · (+966) 575-105-157
         <span class="highlight">ahmed_break8@yahoo.com</span>
       </div>
       <p>
-        Accomplished software developer with nine years of experience in development of applications. Excels in every
-        stage of the life cycle of software development, including design creation, coding, debugging, testing, and
-        maintenance. Expert in devising innovative and tailored solutions to assist businesses achieve their goals in a
-        variety of industries. Advanced skills and knowledge of leading programming tools with a strong background in
-        mathematics, algorithms, and data-processing logic.
+        Seasoned software developer with over nine years of hands-on experience in end-to-end application development.
+        Proficient in all phases of the software development life cycle, from design to maintenance.
+        Adept at crafting tailored solutions to help businesses across various industries achieve their objectives.
+        Possess a solid foundation in mathematics, algorithms, and data processing, complemented by expertise in leading
+        programming tools.
       <div class="contacts">
         <a href="https://codepen.io/quocdat1994" target="_blank" data-toggle="tooltip" title="Last Project">
           <i class="fa fa-code" data-toggle="tooltip" title="Last Project"></i>
@@ -60,112 +60,152 @@
     <section id="Education">
       <h1 class="section-heading">Education</h1>
       <div class="experience">
-        <h2 class="font-weight-bold text-secondary">B.Sc. Business Management, May 2009, Ain Shams University,The Grade
-          Average is Good.</h2>
-        <h2 class="font-weight-bold text-secondary">
-          I am studying hard at faculty of graduate studies for statistical research cairo university to get Graduate
-          Diploma in Computer Science.
-        </h2>
+        <h1 class="font-weight-bold text-secondary">Ain shams university faculty of
+          commerce</h1>
+        <br>
+        <h3 class="font-weight-bold text-secondary">
+          B.Sc. Business Management, May 2009,The Grade
+          Average is Good.
+        </h3>
+        <br>
+        <h1 class="font-weight-bold text-secondary">
+          Cairo University, Faculty of Graduate
+          Studies for Statistical Research,
+          Department of Computer Science and
+          Artificial Intelligence.
+
+        </h1>
+        <br>
+        <h3 class="font-weight-bold text-secondary">
+          I successfully obtained a Graduate Diploma in
+          Computer Science from FGSSR in January 2023
+          with a 'Very Good' overall grade.
+        </h3>
+        <br>
+        <h3 class="font-weight-bold text-secondary">
+          I'm diligently pursuing my Master's degree in
+          Computer Science at FGSSR, class of 2023.
+
+        </h3>
       </div>
 
     </section>
     <section id="experience">
       <h1 class="section-heading">Experience</h1>
+
       <div class="experience">
-        <h2 class="font-weight-bolder">Full-Stack Developer</h2>
-        <h3>freelance</h3>
-        <div>Oct 2019 - Present</div>
-        <p class="text-left ">
-          Developed E-Commerce Web APP :
+        <h2>Full-Stack Team Leader
+        </h2>
+        <br>
+        <h3>ALHABASHI-GROUP
+          <span class="text-primary font-weight-bold" style="font-size: 16px;margin-left: 10px">MAY 2022 - P R E S E N T
+
+          </span>
+        </h3>
+
+        <p class="text-left">Spearheaded the development of Anaam systems for
+          Ministry of Environment Water and Agriculture (MEWA )</p>
+
+        <p>Epidemic Investigation Project: As the Development
+          Team Lead, I directed the technical design and
+          implementation of the system, ensuring timely detection
+          and response mechanisms. My leadership ensured the
+          adoption of best practices, code quality, and the
+          integration of advanced technologies, ultimately optimizing
+          the system's efficiency and effectiveness.
         </p>
+        <br>
+        <p>Vector Investigation Project: As the Development Team
+          Lead, I steered the technical aspects of the project,
+          implementing state-of-the-art solutions to mitigate disease
+          transmission risks. My guidance ensured the seamless
+          integration of innovative technologies, leading to a robust
+          system that safeguards the health of livestock and
+          surrounding communities.</p>
+        <br>
         <p>
-          Is a Full Stack App, Front-End developed using Angular 8 and Back-End there are two options,
-          the first developed using .NET Core Web API 3.1,
-          and the second option developed using Firebase 7,
-          <a class="text-primary ml-1" href="https://test-5dbca.web.app" target="_blank">
-          View...</a>
+          Poultry Production Management Project: As the
+          Development Team Lead, I designed and executed the
+          system's tracking mechanisms, ensuring enhanced
+          outcomes and increased productivity.
+
+        </p>
+        <br>
+        <p>
+          Veterinary Staff Management Project: As the
+          Development Team Lead, I led the creation of a platform to
+          elevate veterinary team standards, ensuring adaptability
+          and effective training.
+
+        </p>
+        <br>
+        <p>
+          Quarry Management Project: As the Team Lead, I
+          spearheaded the development of a robust new system
+          using the latest technologies. We successfully completed
+          the majority of export services and a portion of import
+          functionalities. The project was not fully finalized due to the
+          contract's expiration with the ministry
+        </p>
+        <br>
+
+        <p>
+          Throughout the project, it was an honor to collaborate
+          closely with the ministry's technical team. I always
+          valued their insights and expertise and was dedicated
+          to offering consistent support and assistance
+          whenever needed.
+        </p>
+        <br>
+      </div>
+      <div class="experience">
+        <h2>Full-Stack Developer
+        </h2>
+        <h3>AMANAH TEK
+
+          <span class="text-primary font-weight-bold" style="font-size: 16px;margin-left: 10px">MARCH 2021 - APRIL 2022
+
+          </span>
+
+        </h3>
+        <p>
+          Develop DMS is a powerful off-the-shelf Delivery
+          Management platform, which enables businesses to
+          modernize their delivery.
         </p>
 
-        <p class="text-left  mt-3">Developed and Support the "Break ERP System" utilizing C# and SQL Server,
-          Is a living embodiment of Enterprise
-          Resource Planning system.
-        </p>
-        <p><span class="highlight">Some features in Break ERP system : </span>Genius algorithms, Best and latest
-          technologies Multi-currency,
-          Multi-branches, Multi-stock, Multi-unit, Multi-groups, Multi-categories, Journal entry’s automatic, All
-          financial statements and comparative dates, Trial Balance up to all levels statements and comparative dates,
-          All planning and analysis in all activities, Beautiful design CleanCode Design Principles Design Patterns OOd
-          OOP Maintainable Extensible Testable.</p>
-        <!-- <p><span class="highlight">Security module: </span> Full control over all system processes.</p>
-        <p><span class="highlight ">Basic data module: </span>Includes information for users, customers, suppliers,
-          employees, stores, and branches,
-          Currencies, categories stores, Groups stores, Accounts tree, Units.</p>
-        <p><span class="highlight">Inventory module: </span>Store card, Item card, Main unit card, Sub-unit card,
-          Receive Stock Voucher, Issuance Stock Voucher, Transfer Stock Voucher, Management Receive Stock Voucher,
-          Management Issuance Stock Vouchers And others, Reports. </p>
-        <p><span class="highlight">Purchase module: </span>Purchase order, Purchase invoice, Purchases returns,
-          Management Purchase orders, Management Purchase invoices, Management Purchases returns and others, Reports.
-        </p>
-        <p><span class="highlight">Sales Module: </span>Sales order, Sales invoice, Sales returns, Management Sales
-          orders, Management Sales invoices, Management Sales returns and others, Reports.</p>
-        <p><span class="highlight">Installment Module: </span>Installment card, Installments receipts, Accrued, Payments
-          and others, Reports. </p>
-        <p><span class="highlight">Tax Module: </span>VAT, Tax on commercial and industrial profit (Withholding), Change
-          can be made in accordance with country law.</p>
-        <p><span class="highlight">Finance module: </span>Opening balance, General journal, Journal entry, receipts,
-          payments, Checks and others financial statements according to International Accounting Standards Committee
-          (IASC).</p> -->
-        <p>support and assist many other projects. </p>
+      </div>
+      <div class="experience">
+        <h2>Full Stack Developer ( .Net Core Api - Angular )</h2>
+        <h3>EC-SAT CO.
+          <span class="text-primary font-weight-bold" style="font-size: 16px;margin-left: 10px">JULY 2018 - FEBRUARY
+            2021
 
-      </div>
-      <div class="experience">
-        <h2>Software Developer</h2>
-        <h3>EL-SAFWA FOR TRADE & INDUSTRY</h3>
-        <div>Apr 2017 - Sep 2019</div>
-        <p>Developed upgraded and maintained advanced financial industry software.</p>
-        <p>Modified existing software to detect and correct errors, improve performance, and upgrade interfaces.</p>
-        <p>Coordinate the design and implementation of various applications, Prepared reports on specifications and
-          activities for each project, Provide mentoring services to junior developers as needed.</p>
-      </div>
-      <div class="experience">
-        <h2>Desktop Application Development</h2>
-        <h3>ARABIA INVESTMENT & DEVELOPMENT CO</h3>
-        <div>Jan 2014 - Mar 2017</div>
+          </span>
+        </h3>
         <p>
-          Developed applications to Linking stores, sales, purchases and general accounts, and preparing financial
-          reports.
-        </p>
-        <p>
-          Developed of financial reports to analyze the results of the activities of the company in terms of financial
-          and
-          compared with the plans and budgets estimated.
-        </p>
-        <p>
-          Conducting systems analysis and preparation of financial programs that fit the activity of the establishment
-          on the databases of Sql server and VB.NET.
-        </p>
-        <p>
-          Development of information systems and databases and work on their integration in accordance with the
-          standards, Designing and developing reports.
+          Developed and Supported an "ERP System"
+          Is a living embodiment of the Enterprise Resource
+          Planning system Multi-branches, Multi-stock, Multi-unit,
+          Multi-groups, Multi-categories, Journal entrys automatic.
         </p>
       </div>
       <div class="experience">
-        <h2>Financial Controller on software</h2>
-        <h3>Military service</h3>
-        <div>June 2012 - Aug 2013</div>
+        <h2>Desktop Application Developer</h2>
+        <h3>EL-SAFWA FOR TRADE&INDUSTRY
+          <span class="text-primary font-weight-bold" style="font-size: 16px;margin-left: 10px">JULY 2016 - JUNE 2018
+
+          </span>
+        </h3>
         <p>
-          Worked in the leadership of the Third Army commander of the Army Office of Financial,
-          Financial surveillance in Badr markets on software (New Mind system).
+          Developed upgraded and maintained advanced financial
+          industry software.
+
         </p>
-      </div>
-      <div class="experience">
-        <h2>Junior Financial Analyst</h2>
-        <h3>ARABIA INVESTMENT & DEVELOPMENT CO</h3>
-        <div>May 2009 - May 2012</div>
         <p>
-          Assist in the preparation of financial reports, With the help of computer spreadsheets, draw charts and graphs
-          to illustrate technical reports,
-          Analyze financial.
+          Modified existing software to detect and correct errors,
+          improve performance, and upgrade interfaces.
+
         </p>
       </div>
     </section>
